fix: footer alignments

--- a/styles/content.css
+++ b/styles/content.css
@@ -5,7 +5,6 @@
 }
 
 .content_container {
-  min-height: 100vmin;
   display: flex;
   align-items: center;
   flex-direction: column;
