--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,20 +17,20 @@ body {
   color: var(--font-color);
   background-color: var(--color-primary);
   transition: var(--transition-delay);
-  height: 100vh;
+  min-height: 100vh;
 }
 
 * {
   box-sizing: border-box;
 }
 
-.hide-x-scroll {
+/* .hide-x-scroll {
   overflow-x: hidden;
-}
+} */
 
-.hide-all-scroll {
+/* .hide-all-scroll {
   overflow: hidden;
-}
+} */
 
 #main-view{
  transition: 1s filter linear, 1s -webkit-filter linear;
